--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
           </div>
           <div class="col-lg-6">
             <h2>Major Services</h2>
-            <p class="fst-italic">
               I help people and businesses solve problems with data. </p>
             <h3>Predictive Analysis</h3>
             <ul>
@@ -157,7 +156,6 @@
           </div>
           <div class="col-md-7 pt-4">
             <a href="project-details2.html"><h3>Company Churn Prevention - Predictive Model & Strategic Implementation</h3></a>
-            <p class="fst-italic">
               A project for a telecommunications company. Utilizing company data which predicts customer churn based on company features and pricing.
             </p>
             <ul>
@@ -173,12 +171,15 @@
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <a href="project-details3.html"><h3>Sales Forecast - Predictive Modeling & Interactive Dashboard</h3></a>
-            <p class="fst-italic">
               Forecasting Project using machine learning on a Kaggle analysis for an E-commerce platform.
               </p>
             <p>
               Predicts upcoming sales based on prior inventory data.
             </p>
+            <ul>
+              <li><i class="bi bi-check"></i> Forecasting Project using machine learning</li>
+              <li><i class="bi bi-check"></i> Predicts upcoming sales based on prior inventory data</li>
+            </ul>
           </div>
         </div>
 
@@ -203,12 +204,15 @@
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <a href="project-details5.html"><h3>Data Professionals - PowerBI Dashboard Project</h3></a>
-            <p class="fst-italic">
               Created an interactive dashboard based on data professionals job surveys. 
             </p>
             <p>
               Demonstrates basic metrics about employees in the data professions.
             </p>
+            <ul>
+              <li><i class="bi bi-check"></i> Created an interactive dashboard based on data professionals job surveys.</li>
+              <li><i class="bi bi-check"></i> Demonstrates basic metrics about employees in the data professions.</li>
+            </ul>
           </div>
         </div>
 
