--- a/service.html
+++ b/service.html
@@ -95,7 +95,7 @@
                       <li><i class="bi bi-check2-circle"></i> Directed marketing</li>
         
                     </ul>                    
-                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Sechdule a Meeting</a></div>
+                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
                   </div>
                 </div>
               </div>
@@ -112,7 +112,7 @@
                       <li><i class="bi bi-check2-circle"></i> Dynamic web embeddable</li>
         
                     </ul>                    
-                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Sechdule a Meeting</a></div>
+                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
                   </div>
                 </div>
               </div>
