--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Aidan</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>GearShift</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -84,56 +84,45 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h2>Hey, I'm Aidan 👋🏻</h2>
             <p class="fst-bold">
-              In today's digital landscape, data is everywhere. From online interactions to business transactions, it's a vital resource waiting to be harnessed. As an independent data scientist, I see immense potential in this wealth of information. 
-              I firmly believe that every organization possesses valuable insights within their data, waiting to be discovered and utilized. My passion lies in helping businesses and individuals extract actionable insights from their data, driving tangible results.
-              With expertise in data analytics, machine learning, and statistical modeling, I offer tailored solutions to meet your unique needs. Whether it's predicting trends or creating impactful visualizations, I'm here to transform your data into actionable intelligence.
-              In a fast-paced world where data is king, leveraging it effectively is crucial for success. Let's collaborate to unlock the full potential of your data and drive meaningful outcomes.
-              Get in touch to start the conversation.
+              I have been in the car business since before I could walk.
+               I've experienced every facet of the business. 
+               My mission is to streamline dealership processes, making them as smooth and efficient as possible..
             </p>
-            <h3>Challenges I Address</h3>
+            <h2>Beyond Work</h2>
             <ul>
-              <li><i class="bi bi-check2-circle"></i> Predictive Analysis</li>
-              <li><i class="bi bi-check2-circle"></i> Data-Backed Consultation</li>
+              <li><i class="bi bi-check2-circle"></i> Living authentically and embracing new adventures</li>
+              <li><i class="bi bi-check2-circle"></i> Exploring the world through travel</li>
             </ul>
-            <p>
-              I believe every company has untapped potential in data they already have possess.
-            </p>
-          </div>
-        </div>
-
-      </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section class="facts section-bg" data-aos="fade-up">
-      <div class="container">
-        
-        <div class="row counters">
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Years of Experience</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects Completed</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1000" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Invested Learning </p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients Assisted</p>
-          </div>
-
-        </div>
-
+   <!-- ======= Facts Section ======= -->
+<section class="facts section-bg" data-aos="fade-up">
+  <div class="container">
+    <div class="row counters">
+      <div class="col-lg-3 col-6 text-center">
+        <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+        <p>Years Innovating in Automotive Data</p>
       </div>
-    </section><!-- End Facts Section -->
+
+      <div class="col-lg-3 col-6 text-center">
+        <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+        <p>Automated Solutions Developed</p>
+      </div>
+
+      <div class="col-lg-3 col-6 text-center">
+        <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
+        <p>Hours Devoted to Data Science</p>
+      </div>
+
+      <div class="col-lg-3 col-6 text-center">
+        <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+        <p>Successful Implementations</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Facts Section -->
+
 
   </main><!-- End #main -->
 
