--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Aidan</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>GearShift</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -63,7 +63,7 @@
     <div class="carousel-item active">
       <div class="carousel-container">
         <h2 class="animate__animated animate__fadeInDown">Hello,<span> I'm Aidan</span></h2>
-        <p class="smaller-text animate__animated animate__fadeInUp">I help people and businesses solve problems with data.</p>
+        <p class="smaller-text animate__animated animate__fadeInUp">I build automation tools to increase automotive dealership efficiency by double.</p>
         <a href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03" class="btn-get-started animate__animated animate__fadeInUp">Get in Touch</a>
       </div>
     </div>
@@ -71,8 +71,8 @@
     <!-- Slide 2 -->
     <div class="carousel-item">
       <div class="carousel-container">
-        <h2 class="animate__animated animate__fadeInDown">Independent Data Scientist</h2>
-        <p class="smaller-text animate__animated animate__fadeInUp">I'm a firm believer that every company has the potential to make actionable insights with data they already have. By implementing a variety of unique solutions ranging from predictive analytics, visualizations & dashboard creation, to direct consults, I'll make your data tangible.</p>
+        <h2 class="animate__animated animate__fadeInDown">Founder of GearShift</h2>
+        <p class="smaller-text animate__animated animate__fadeInUp">Shifting gears in the automotive industry through automation and data solutions. Currently developing the GearShift LLM to make car buying easier and more efficient.</p>
         <a href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03" class="btn-get-started animate__animated animate__fadeInUp">Get in Touch</a>
       </div>
     </div>
@@ -115,26 +115,26 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <img src="assets/img/prof.png" class="img-fluid" alt="">
+            <img src="assets/img/gear.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6">
-            <h2>Major Services</h2>
-              I help people and businesses solve problems with data. </p>
-            <h3>Predictive Analysis</h3>
+            <h2>Saving Time with Automation</h2>
+            Streamlining Dealership Customer Interactions. </p>
+            <h3>Automation Solutions
+
+            </h3>
             <ul>
-              <li><i class="bi bi-check2-circle"></i> Churn predictions</li>
-              <li><i class="bi bi-check2-circle"></i> Sales forecasting</li>
-              <li><i class="bi bi-check2-circle"></i> Directed marketing</li>
+              <li><i class="check2-circle"></i> Custom automations for your dealership
+              </li>
+              <li><i class="check2-circle"></i> Enhanced customer engagement</li>
+              <li><i class="check2-circle"></i> 2X Dealership Opperations</li>
             </ul>
-            <h3>Data Backed Consultation</h3>
+            <h3>GearShift LLM Development</h3>
             <ul>
-              <li><i class="bi bi-check2-circle"></i> Patent testing & planning</li>
-              <li><i class="bi bi-check2-circle"></i> Cohesive strategy guide</li>
-              <li><i class="bi bi-check2-circle"></i> Dynamic web embeddable</li>
+              <li><i class="check2-circle"></i> Connect dealers with a smart AI assistant for car matching</li>
+              <li><i class="check2-circle"></i> Assist users in answering important car buying questions</li>
+              <li><i class="check2-circle"></i> Pass information of qualified buyers directly to dealers with the matching car</li>
             </ul>
-            <p>
-              I believe every company has untapped potential in data they already possess.
-            </p>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Welcome to my project showcase! Here you will find a collection of various projects I have worked on in the past.</p>
+          <p>My Data Projects! Here you will find a collection of various projects I have worked on in the past.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
