--- a/about.html
+++ b/about.html
@@ -78,21 +78,26 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6">
-            <img src="assets/img/prof.png" class="img-fluid" alt="">
-          </div>
+         
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <h2>Hey, I'm Aidan 👋🏻</h2>
-            <p class="fst-bold">
-              I have been in the car business since before I could walk.
-               I've experienced every facet of the business. 
-               My mission is to streamline dealership processes, making them as smooth and efficient as possible..
-            </p>
-            <h2>Beyond Work</h2>
-            <ul>
-              <li><i class="bi bi-check2-circle"></i> Living authentically and embracing new adventures</li>
-              <li><i class="bi bi-check2-circle"></i> Exploring the world through travel</li>
-            </ul>
+            <div class="aboutTextContent">
+              <h2>Hey, I'm Aidan 👋🏻</h2>
+              <p class="fst-bold">
+                I have been in the car business since before I could walk.
+                 I've experienced every facet of the business. 
+                 My mission is to streamline dealership processes, making them as smooth and efficient as possible..
+              </p>
+              <h2>Beyond Work</h2>
+              <ul>
+                <li><i class="bi bi-check2-circle"></i> Living authentically and embracing new adventures</li>
+                <li><i class="bi bi-check2-circle"></i> Exploring the world through travel</li>
+              </ul>
+            </div> 
+          </div>
+          <div class="col-lg-6">
+            <img src="assets/img/prof.png" class="img-fluid itemImg" alt="">
+          </div>
+        </div>
     </section><!-- End About Section -->
 
    <!-- ======= Facts Section ======= -->
