--- a/project.html
+++ b/project.html
@@ -77,12 +77,12 @@
     <section class="service-details">
       <div class="container">
         <div class="section-title">
-          <h2>My Work</h2>
+          <h2>My <span class="modified">Work</span></h2>
           <p>Welcome to my project showcase! Here you will find a collection of various projects I have worked on in the past.</p>
         </div>
 
         <div class="row">
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/pred.jpeg" alt="...">
@@ -94,7 +94,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/com.png" alt="...">
@@ -107,7 +107,7 @@
             </div>
 
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/car.png" alt="...">
@@ -119,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/dash.png" alt="...">
@@ -131,7 +131,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/destiny.png" alt="...">
@@ -143,7 +143,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-9 mx-auto d-flex align-items-center" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/viz.png" alt="...">
