--- a/service.html
+++ b/service.html
@@ -80,12 +80,12 @@
         <!-- ======= Service Details Section ======= -->
         <section class="service-details">
             <div class="section-title">
-              <h2>GearShift Services</h2>
+              <h2>GearShift <span class="modified"> Services</span></h2>
             <div class="row">
-              <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+              <div class="col-md-8 mx-auto d-flex align-items-center" data-aos="fade-up">
                 <div class="card">
                   <div class="card-img text-center">
-                    <img src="assets/img/predy.jpeg" alt="...">
+                    <img src="assets/img/predy.jpeg" alt="..." class="serItemImg">
                   </div>
                   <div class="card-body">
                     <h5 class="card-title"><a href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03">Predictive Analysis</a></h5>
@@ -96,12 +96,12 @@
                       <li><i class="bi bi-check2-circle"></i> Directed marketing</li>
         
                     </ul>                    
-                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
+                    <div class="read-more"><a class="readBtn" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
-                <div class="card">
+              <div class="col-md-8 mx-auto d-flex align-items-center" data-aos="fade-up">
+                <div class="card cardReverce">
                   <div class="card-img text-center">
                     <img src="assets/img/automate.jpeg" alt="...">
                   </div>
@@ -113,7 +113,7 @@
                       <li><i class="bi bi-check2-circle"></i> Recognizes sentiment and provides continuous responses</li>
         
                     </ul>                    
-                    <div class="read-more"><a class="btn btn-secondary text-center text-light" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
+                    <div class="read-more"><a class="readBtn" href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"><i ></i> Schedule a Meeting</a></div>
                   </div>
                 </div>
               </div>
