--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 <section class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 mx-auto">
 
         <!-- Email and LinkedIn -->
         <div class="info-boxes">
