--- a/project-details6.html
+++ b/project-details6.html
@@ -79,7 +79,7 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row align-items-center gy-4">
 
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
