--- a/about.html
+++ b/about.html
@@ -85,12 +85,13 @@
               <p class="fst-bold">
                 I have been in the car business since before I could walk.
                  I've experienced every facet of the business. 
-                 My mission is to streamline dealership processes, making them as smooth and efficient as possible..
+                 My mission is to streamline dealership processes, making them as smooth and efficient as possible.
               </p>
               <h2>Beyond Work</h2>
               <ul>
-                <li><i class="bi bi-check2-circle"></i> Living authentically and embracing new adventures</li>
-                <li><i class="bi bi-check2-circle"></i> Exploring the world through travel</li>
+                <li><i class="bi bi-check2-circle"></i> Keeping it real & telling authentic, cool stories</li>
+                <li><i class="bi bi-check2-circle"></i> Traveling & diving into diverse walks of life</li>
+                <li><i class="bi bi-check2-circle"></i> playing the guitar & filming my build process</li>
               </ul>
             </div> 
           </div>
