--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown mainHeading">Hello,<span> I'm Aidan</span></h2>
+          <h2 class="animate__animated animate__fadeInDown mainHeading">Hey,<span> I'm Aidan</span></h2>
           <p class="smaller-text animate__animated animate__fadeInUp">I build automation tools to increase automotive
             dealership efficiency by double.</p>
           <a href="https://calendly.com/aidanszwec/coffee-chat?back=1&month=2024-03"
