--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>GearShift</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Aidan's Work</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -46,8 +46,8 @@
         <ul>
           <li><a class="" href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-          <li><a href="service.html">Services</a></li>
           <li><a href="project.html">Projects</a></li>
+          <li><a class="active" href="service.html">My Music</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -81,17 +81,29 @@
          
           <div class="col-lg-6 pt-4 pt-lg-0">
             <div class="aboutTextContent">
-              <h2>Hey, I'm Aidan 👋🏻</h2>
+              <h2>Hey, It's Aidan 👋🏻</h2>
               <p class="fst-bold">
-                I have been in the car business since before I could walk.
-                 I've experienced every facet of the business. 
-                 My mission is to streamline dealership processes, making them as smooth and efficient as possible.
+                This is me summed up! I am a final year student finishing a degree in Information Sciences
+                from the University of Illinois Urbana Champaign, while in University I was never a fan of the idea that 
+                your options to gain practical experience with your field of study are limited till you graduate so I found some workarounds!
+                I started contracting fulltime and got the opproutunity to work in over 5 different industries doing a 
+                bunch of cool work on projects ranging from machine learning to data analytics, to dashboarding!
               </p>
-              <h2>Beyond Work</h2>
+              <h2>What is GearShift? ⚙️</h2>
+              <p class="fst-bold">
+                During the summers I had internships or worked at my dads family dealership, where I have been working at since before I could drive. Doing 
+                everything from washing cars, to buyin them.
+
+                Last summer when I was working as a customer service person I couldn't help but recognize how useful the application for an AI agent would be in that sector
+                after learning that automation tools are in continous development and the dealer world was untapped in that regard I got to work. I started building my passion project
+                GearShift a long term project brining automation tools to dealers giving dealerships more efficient communication methods. 
+                
+              </p>
+              <h2>What I'm Obsessed With Lately 🚀</h2>
               <ul>
-                <li><i class="bi bi-check2-circle"></i> Keeping it real & telling authentic, cool stories</li>
-                <li><i class="bi bi-check2-circle"></i> Traveling & diving into diverse walks of life</li>
-                <li><i class="bi bi-check2-circle"></i> playing the guitar & filming my build process</li>
+                <li><i class="bi bi-check2-circle"></i> Creating a full backend automation for car dealers to work betteer</li>
+                <li><i class="bi bi-check2-circle"></i> Upon graduation taking a trip down to Cartegena Columbia</li>
+                <li><i class="bi bi-check2-circle"></i> Learn some cool new solos on the guitar, and start gigging</li>
               </ul>
             </div> 
           </div>
@@ -132,78 +144,6 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Consider joining the Newsletter for updates in utilizing your data for optimal business performance.</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <a href="https://aidansdata.substack.com/"><input type="email" name="email"><input type="submit" value="Subscribe"></a>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Predictive Analysis</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Data Backed Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Churn predictions</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Patent testing & planning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Directed marketing</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Me</h4>
-            <p>
-              <strong>Email:</strong> aidanszwec@gmail.com<br>
-            </p>
-
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Aidan</h3>
-            <p>Independent Data Scientist. I'm a firm believer that every company has the potential to make actionable insights with data they already have. By implementing a variety of unique solutions ranging from predictive analytics, visualizations & dashboard creation, to direct consults, I'll make your data tangible.</p>
-            <div class="social-links mt-3">
-              <a href="https://twitter.com/AidanSzwec" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="https://www.linkedin.com/in/aidanszwec" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Aidan</span></strong>. All Rights Reserved
-      </div>
-    </div>
-  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
