--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>GearShift</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Aidan's Work</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -47,8 +47,8 @@
         <ul>
           <li><a class="" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="service.html">Services</a></li>
           <li><a href="project.html">Projects</a></li>
+          <li><a class="active" href="service.html">My Music</a></li>
           <li><a class="active" href="contact.html">Contact Me</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -84,24 +84,21 @@
         <!-- Email and LinkedIn -->
         <div class="info-boxes">
           <!-- Email -->
-          <div class="info-box">
+          <a href="mailto:aidanszwec@gmail.com" class="info-box email-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <a href="mailto:aidanszwec@gmail.com">aidanszwec@gmail.com</a>
-          </div>
+          </a>
           <!-- LinkedIn Profile -->
-          <div class="info-box">
-            <a href="https://www.linkedin.com/in/aidanszwec" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/aidanszwec" class="info-box linkedin-box">
+            <i class="bx bxl-linkedin"></i>
             <h3>Connect on LinkedIn</h3>
-            <p>Aidan Szwec</p>
-          </div>
+          </a>
         </div>
 
       </div>
     </div>
   </div>
 </section>
-
 
 
           
@@ -114,80 +111,6 @@
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
-
-   <!-- ======= Footer ======= -->
-   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Consider joining the Newsletter for updates in utilizing your data for optimal business performance.</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <a href="https://aidansdata.substack.com/"><input type="email" name="email"><input type="submit" value="Subscribe"></a>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Predictive Analysis</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Data Backed Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Churn predictions</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Patent testing & planning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Directed marketing</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Me</h4>
-            <p>
-              <strong>Email:</strong> aidanszwec@gmail.com<br>
-            </p>
-
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Aidan</h3>
-            <p>Independent Data Scientist. I'm a firm believer that every company has the potential to make actionable insights with data they already have. By implementing a variety of unique solutions ranging from predictive analytics, visualizations & dashboard creation, to direct consults, I'll make your data tangible.</p>
-            <div class="social-links mt-3">
-              <a href="" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="https://www.linkedin.com/in/aidanszwec" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Aidan</span></strong>. All Rights Reserved
-
-      </div>
-    </div>
-  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
