--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,12 @@
 
     <!-- ======= Contact Section ======= -->
 <!-- ======= Contact Section ======= -->
+<!-- ======= Contact Section ======= -->
 <section class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-6 mx-auto">
-
-        <!-- Email and LinkedIn -->
-        <div class="info-boxes">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+        <div class="info-boxes text-center">
           <!-- Email -->
           <a href="mailto:aidanszwec@gmail.com" class="info-box email-box">
             <i class="bx bx-envelope"></i>
@@ -94,11 +93,10 @@
             <h3>Connect on LinkedIn</h3>
           </a>
         </div>
-
       </div>
     </div>
   </div>
-</section>
+</section><!-- End Contact Section -->
 
 
           
