--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6">
-        <div class="info-boxes text-center">
+        <div class="contact-info-boxes text-center">
           <!-- Email -->
           <a href="mailto:aidanszwec@gmail.com" class="info-box email-box">
             <i class="bx bx-envelope"></i>
@@ -96,7 +96,7 @@
       </div>
     </div>
   </div>
-</section><!-- End Contact Section -->
+  </section><!-- End Contact Section -->
 
 
           
