--- a/about.html
+++ b/about.html
@@ -73,46 +73,46 @@
       </div>
     </section><!-- End About Us Section -->
 
-    <!-- ======= About Section ======= -->
-    <section class="about" data-aos="fade-up">
-      <div class="container">
-
-        <div class="row">
-         
+<!-- ======= About Section ======= -->
+<section class="about" data-aos="fade-up">
+  <div class="container">
+      <div class="row">
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <div class="aboutTextContent">
-              <h2>Hey, It's Aidan 👋🏻</h2>
-              <p class="fst-bold">
-                This is me summed up! I am a final year student finishing a degree in Information Sciences
-                from the University of Illinois Urbana Champaign, while in University I was never a fan of the idea that 
-                your options to gain practical experience with your field of study are limited till you graduate so I found some workarounds!
-                I started contracting fulltime and got the opproutunity to work in over 5 different industries doing a 
-                bunch of cool work on projects ranging from machine learning to data analytics, to dashboarding!
-              </p>
-              <h2>What is GearShift? ⚙️</h2>
-              <p class="fst-bold">
-                During the summers I had internships or worked at my dads family dealership, where I have been working at since before I could drive. Doing 
-                everything from washing cars, to buyin them.
+              <div class="aboutTextContent">
+                  <h2>Hey, It's Aidan 👋🏻</h2>
+                  <p class="fst-bold">
+                      This is me summed up! I am a final year student finishing a degree in Information Sciences
+                      from the University of Illinois Urbana Champaign, while in University I was never a fan of the idea that 
+                      your options to gain practical experience with your field of study are limited till you graduate so I found some workarounds!
+                      I started contracting fulltime and got the opportunity to work in over 5 different industries doing a 
+                      bunch of cool work on projects ranging from machine learning to data analytics, to dashboarding!
+                  </p>
+                  <h2>What is GearShift? ⚙️</h2>
+                  <p class="fst-bold">
+                      During the summers I had internships or worked at my dad's family dealership, where I have been working at since before I could drive. Doing 
+                      everything from washing cars to buying them.
 
-                Last summer when I was working as a customer service person I couldn't help but recognize how useful the application for an AI agent would be in that sector
-                after learning that automation tools are in continous development and the dealer world was untapped in that regard I got to work. I started building my passion project
-                GearShift a long term project brining automation tools to dealers giving dealerships more efficient communication methods. 
-                
-              </p>
-              <h2>What I'm Obsessed With Lately 🚀</h2>
-              <ul>
-                <li><i class="bi bi-check2-circle"></i> Creating a full backend automation for car dealers to work betteer</li>
-                <li><i class="bi bi-check2-circle"></i> Upon graduation taking a trip down to Cartegena Columbia</li>
-                <li><i class="bi bi-check2-circle"></i> Learn some cool new solos on the guitar, and start gigging</li>
-              </ul>
-            </div> 
+                      Last summer when I was working as a customer service person I couldn't help but recognize how useful the application for an AI agent would be in that sector
+                      after learning that automation tools are in continuous development and the dealer world was untapped in that regard I got to work. I started building my passion project
+                      GearShift, a long-term project bringing automation tools to dealers, giving dealerships more efficient communication methods. 
+                  </p>
+                  <h2>What I'm Obsessed With Lately 🚀</h2>
+                  <ul>
+                      <li><i class="bi bi-check2-circle"></i> Creating a full backend automation for car dealers to work better</li>
+                      <li><i class="bi bi-check2-circle"></i> Upon graduation taking a trip down to Cartagena, Colombia</li>
+                      <li><i class="bi bi-check2-circle"></i> Learn some cool new solos on the guitar, and start gigging</li>
+                  </ul>
+              </div> 
           </div>
           <div class="col-lg-6">
-            <img src="assets/img/prof.png" class="img-fluid itemImg" alt="">
+              <img src="assets/img/prof.png" class="img-fluid itemImg profImg" alt="">
+              <div>
+                  <img src="assets/img/mtn.jpg" class="img-fluid itemImg mtnImg" alt="Mountain Image">
+              </div>
           </div>
-        </div>
-    </section><!-- End About Section -->
-
+      </div>
+  </div>
+</section><!-- End About Section -->
    <!-- ======= Facts Section ======= -->
 <section class="facts section-bg" data-aos="fade-up">
   <div class="container">
