--- a/service.html
+++ b/service.html
@@ -76,14 +76,14 @@
     <!-- ======= About Section ======= -->
     <section class="about" data-aos="fade-up">
       <div class="container">
-
-        <!-- ======= Service Details Section ======= -->
-        <section class="service-details">
-            <div class="section-title">
-              <h2>My <span class="modified"> Music 🎸</span></h2>
-              Coming Soon... 😄
-           
-  </main><!-- End #main -->
+<!-- ======= Service Details Section ======= -->
+<section class="service-details">
+  <div class="section-title">
+      <h2>My <span class="modified"> Music 🎸</span></h2>
+      <p>Coming Soon... 😄</p>
+  </div>
+  <img src="assets/img/guitar.jpg" class="img-fluid guitarImg" alt="Guitar Image">
+</section><!-- End #main -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
